# violet

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  example.conf  violet.service
.github/workflows/: build.yml
src/: daemon.c  daemon.h  main.c  options.c  options.h  utils.c  utils.h
